Possible fix for button text color on mobile

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ button {
     height: 100px;
     font-size: 2em;
     border-radius: 8px;
+    color: #000000;
 }
 
 
